# aegis-gate

./: .gitignore  Architecture.md  Cargo.toml  Implement-Progress.md  QUICKSTART.md  README.md  Requirement.md
config/: README.md  waf.yaml
config/rules/: example.yaml
crates/aegis-bin/: Cargo.toml
crates/aegis-bin/src/: main.rs
crates/aegis-control/: Cargo.toml
crates/aegis-control/src/: access_log.rs  gitops.rs  health.rs  lib.rs  residency.rs  slo.rs  tracing_init.rs
crates/aegis-control/src/admin_auth/: csrf.rs  mod.rs  mtls.rs  password.rs  rate_limit.rs  session.rs  totp.rs
crates/aegis-control/src/api/: config.rs
crates/aegis-control/src/audit/: chain.rs  mod.rs  state_snapshot.rs  verify.rs  witness.rs
crates/aegis-control/src/audit/sinks/: cef.rs  ecs.rs  jsonl.rs  kafka.rs  leef.rs  mod.rs  ocsf.rs  splunk_hec.rs  syslog.rs
crates/aegis-control/src/compliance/: fips.rs  gdpr.rs  hipaa.rs  mod.rs  pci.rs  soc2.rs
crates/aegis-control/src/dashboard/: mod.rs  overview.rs  sse.rs
crates/aegis-control/src/metrics/: exporter.rs  mod.rs
crates/aegis-control/tests/: dod.rs
crates/aegis-core/: Cargo.toml
crates/aegis-core/src/: audit.rs  cache.rs  cluster.rs  config.rs  context.rs  decision.rs  error.rs  health.rs  lib.rs  pipeline.rs  risk.rs  sd.rs  secrets.rs  state.rs  tier.rs
crates/aegis-proxy/: Cargo.toml
crates/aegis-proxy/src/: acme.rs  cluster.rs  dr.rs  hotbin.rs  lib.rs  ocsp.rs  proxy.rs  quota.rs  secrets.rs  session.rs  shed.rs  supervisor.rs  traffic.rs
crates/aegis-proxy/src/cache/: mod.rs
crates/aegis-proxy/src/listener/: acceptor.rs  mod.rs  tls.rs
crates/aegis-proxy/src/proto/: grpc.rs  h2.rs  mod.rs  ws.rs
crates/aegis-proxy/src/route/: host.rs  mod.rs  path.rs
crates/aegis-proxy/src/sd/: mod.rs
crates/aegis-proxy/src/state/: in_memory.rs  mod.rs  redis.rs
crates/aegis-proxy/src/transform/: cors.rs  mod.rs  vars.rs
crates/aegis-proxy/src/upstream/: circuit.rs  health.rs  lb.rs  mod.rs  tls.rs
crates/aegis-security/: Cargo.toml
crates/aegis-security/src/: behavior.rs  bots.rs  ddos.rs  lib.rs  noop.rs  pipeline.rs  response_filter.rs  threat_intel.rs  velocity.rs
crates/aegis-security/src/api_security/: api_keys.rs  graphql.rs  hmac_sign.rs  mod.rs
crates/aegis-security/src/auth/: basic.rs  forward.rs  jwt.rs  mod.rs  opa.rs
crates/aegis-security/src/challenge/: captcha.rs  ladder.rs  mod.rs  token.rs
crates/aegis-security/src/content/: archive.rs  icap.rs  mod.rs
crates/aegis-security/src/detectors/: body_abuse.rs  header_injection.rs  mod.rs  path_traversal.rs  recon.rs  sqli.rs  ssrf.rs  xss.rs
crates/aegis-security/src/dlp/: fpe.rs  mod.rs
crates/aegis-security/src/fingerprint/: h2.rs  ja3.rs  ja4.rs  mod.rs
crates/aegis-security/src/ip_rep/: asn.rs  mod.rs  xff.rs
crates/aegis-security/src/rate_limit/: bucket.rs  mod.rs  sliding.rs
crates/aegis-security/src/risk/: mod.rs
crates/aegis-security/src/rules/: ast.rs  eval.rs  linter.rs  mod.rs  parser.rs
crates/aegis-security/tests/: benign_corpus.rs  red_team.rs
deploy/: GUIDE.md  README.md  dependencies.md  docker-compose.dev.yml  docker-compose.test.yml
deploy/etcd/: README.md  bootstrap.sh  seed.yaml
deploy/prometheus/: prometheus.yml
docs/: README.md  USAGE.md  adaptive-load-shedding.md  api-security.md  audit-logging.md  behavioral-analysis.md  bot-management.md  challenge-engine.md  cli.md  compliance.md  config-hot-reload.md  content-scanning.md  dashboard-auth.md  dashboard.md  data-residency-retention.md  ddos-protection.md  dependencies.md  detection-body-abuse.md  detection-brute-force.md  detection-header-injection.md  detection-path-traversal.md  detection-recon.md  detection-sqli.md  detection-ssrf.md  detection-xss.md  device-fingerprinting.md  dlp.md  dr-backup.md  external-auth.md  geoip-filtering.md  gitops-change-management.md  graceful-degradation.md  ha-clustering.md  ip-reputation.md  multi-tenancy.md  observability-prometheus-otel.md  per-route-quotas.md  protocols.md  rate-limiting.md  rbac-sso.md  (+19 more)
docs/deferred/: multi-tenancy.md  rbac-sso.md
plans/: control.md  member-1-proxy-core.md  member-2-security-pipeline.md  member-3-control-plane.md  plan.md  proxy.md  security.md  shared-contract.md
tests/: README.md
tests/load/: baseline.js  ddos-burst.js  mixed-tiers.js
tests/security/: run-corpus.sh  run-nuclei.sh  run-zap.sh
tests/security/corpus/benign/: INDEX.md
tests/security/corpus/malicious/: INDEX.md
