[workspace]
members = [
    "crates/aegis-core",
    "crates/aegis-proxy",
    "crates/aegis-security",
    "crates/aegis-control",
    "crates/aegis-bin",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Runtime & async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP
http = "1"
bytes = "1"
hyper = { version = "1", features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Crypto
blake3 = "1"
sha2 = "0.10"
hmac = "0.12"
argon2 = "0.5"
zeroize = { version = "1", features = ["zeroize_derive"] }

# Config
figment = { version = "0.10", features = ["yaml", "env"] }
arc-swap = "1"
notify = "6"

# Concurrency
dashmap = "6"
moka = { version = "0.12", features = ["future"] }
parking_lot = "0.12"

# Matching
regex = "1"
ipnet = { version = "2", features = ["serde"] }
aho-corasick = "1"
globset = "0.4"

# Observability
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

# Error handling
thiserror = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Auth
jsonwebtoken = "9"

# Testing
tokio-test = "0.4"

# Duration parsing
humantime = "2"
humantime-serde = "1"
