[package]
name = "aegis-control"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
aegis-core = { path = "../aegis-core" }
async-trait.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
prometheus.workspace = true
sha2.workspace = true
blake3.workspace = true
hmac.workspace = true
argon2.workspace = true
chrono.workspace = true
tracing.workspace = true
ipnet.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
