[package]
name = "aegis-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
figment.workspace = true
futures.workspace = true
http.workspace = true
humantime.workspace = true
humantime-serde.workspace = true
ipnet.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
zeroize.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
