[package]
name = "aegis-proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
aegis-core = { path = "../aegis-core" }
arc-swap.workspace = true
async-trait.workspace = true
blake3.workspace = true
bytes.workspace = true
chrono.workspace = true
dashmap.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
moka.workspace = true
notify.workspace = true
regex.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
rustls-pki-types.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tracing.workspace = true

[dev-dependencies]
aegis-security = { path = "../aegis-security" }
futures = "0.3"
rcgen.workspace = true
rustls-pki-types.workspace = true
serde_yaml.workspace = true
tempfile = "3"
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-stream.workspace = true
tokio-tungstenite.workspace = true
