[package]
name = "aegis-security"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
aegis-core = { path = "../aegis-core" }
arc-swap.workspace = true
async-trait.workspace = true
chrono.workspace = true
http.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full", "test-util"] }
